Closed Bug 1369967 Opened 8 years ago Closed 8 years ago

Crash in mozilla::AudioProxyThread::InternalProcessAudioChunk

Categories

(Core :: WebRTC: Audio/Video, defect)

51 Branch
All
Windows 7
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 --- wontfix
firefox53 --- wontfix
firefox54 --- wontfix
firefox55 --- fixed

People

(Reporter: philipp, Assigned: padenot)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-e7667c05-6902-49ce-b406-677120170603. ============================================================= Crashing Thread (100) Frame Module Signature Source 0 xul.dll mozilla::AudioProxyThread::InternalProcessAudioChunk(int, mozilla::AudioChunk&, bool) media/webrtc/signaling/src/mediapipeline/MediaPipeline.cpp:552 this is a low volume crash signature that shows up from windows 7 users starting with firefox 51 and later builds. most user comments say they where trying to join a facebook video call.
Paul can you please take a look and asses how important this is?
Component: WebRTC: Signaling → WebRTC: Audio/Video
Flags: needinfo?(padenot)
Rare stack buffer overflow. Patch coming up.
Flags: needinfo?(padenot)
Assignee: nobody → padenot
Comment on attachment 8874374 [details] Bug 1369967 - Remove one use of a stack-allocated buffer and fix another buffer's size. https://reviewboard.mozilla.org/r/145734/#review149712
Attachment #8874374 - Flags: review?(rjesup) → review+
Pushed by paul@paul.cx: https://hg.mozilla.org/integration/autoland/rev/7edfae1ee9dc Remove one use of a stack-allocated buffer and fix another buffer's size. r=jesup
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
This already missed 54 and it doesn't look high-volume enough on ESR52 to worry about backporting there either. Feel free to set the status back to affected and nominate it for approval if you feel otherwise, however.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: