Bug 1369967 - Remove one use of a stack-allocated buffer and fix another buffer's size. r=jesup

Two things here:
- The default stack size of the thread pool is not very big, it's better to
stick the buffer we need on the object.
- There was a unit mismatch between bytes and samples. This changes the name to
make the unit more obvious, and fixes its usage by dividing by the sample size.

MozReview-Commit-ID: 19bbS6iGvTw